# vibe-invaders

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  GAME_FEATURES.md  IMPLEMENTATION_SUMMARY.md  README.md  Trunk.toml  index.html
.github/: copilot-instructions.md
.github/instructions/: bevy-ecs.instructions.md  documentation.instructions.md  general.instructions.md  rust.instructions.md
.github/workflows/: deploy.yml
src/: components.rs  constants.rs  main.rs  resources.rs
src/systems/: background.rs  bullet.rs  collision.rs  enemy.rs  explosion.rs  mod.rs  player.rs  screens.rs  setup.rs  ui.rs  victory.rs
