[package]
name = "vibe-invaders"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_state",
    "bevy_asset",
    "bevy_color",
    "bevy_window",
    "bevy_camera",
    "bevy_image",
    "bevy_mesh",
    "bevy_shader",
    "bevy_audio",
    "vorbis",
    "wav",
    "default_font",
    "png",
    "x11",
    "multi_threaded",
] }
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
