[package]
name = "vibe-invaders"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"

[dependencies.bevy]
version = "0.17.3"
default-features = false
features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_state",
    "bevy_asset",
    "bevy_color",
    "bevy_window",
    "bevy_camera",
    "bevy_image",
    "bevy_mesh",
    "bevy_shader",
    "bevy_audio",
    "wav",
    "default_font",
    "png",
]

# Native-only features (x11, multi_threaded, vorbis are not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["x11", "multi_threaded", "vorbis"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
